<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.christineberger.android.tunetrainer.GuitarStandard">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:srcCompat="@drawable/standard"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/rounded_corners"
                android:padding="8dp"
                android:text="@string/str_instr"
                android:textColor="@color/colorDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_stnd_low_e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorLowE"
                    android:text="@string/str_e"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_stnd_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorA"
                    android:text="@string/str_a"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_stnd_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorHighD"
                    android:text="@string/str_d"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_stnd_g"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorG"
                    android:text="@string/str_g"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_stnd_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorB"
                    android:text="@string/str_b"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btn_stnd_high_e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorHighE"
                    android:text="@string/str_e"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_stnd_tuning"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
