<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.christineberger.android.tunetrainer.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/logo"/>

        <LinearLayout
            android:id="@+id/tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/uke_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/str_uke_btn"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/uke_selected"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="1dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/stnd_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#202020"
                    android:text="@string/str_stnd_btn"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/standard_selected"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/dropd_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#202020"
                    android:text="@string/str_dropd_btn"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/dropd_selected"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/about_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".75"
                    android:background="#202020"
                    android:text="@string/str_about_btn"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/about_selected"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tabs_layout"
            android:background="@color/colorLight"
            android:orientation="vertical">
        </LinearLayout>

        <fragment
            android:id="@+id/content_fragment"
            android:name="com.christineberger.android.tunetrainer.Ukulele"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/divider"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
